@@ -25,5 +25,6 @@ const t_bunny_context		gl_bunny_depth_context =
     NULL,
     NULL,
     (t_bunny_loop)depth_entering,
-    (t_bunny_leaving_context)depth_leaving
+    (t_bunny_leaving_context)depth_leaving,
+    NULL
   };
